log
Thu 23 Mar 2023 09:49:40 PM UTC: 
 tests:  0|6
total_score: 0/70
b508575
Fri 24 Mar 2023 11:23:17 AM UTC: 
 list.c | 3 +++
 1 file changed, 3 insertions(+)
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:32:9: error: unused variable ‘aux’ [-Werror=unused-variable]
   32 |   List *aux = (List *) malloc(sizeof(List));
      |         ^~~
cc1: all warnings being treated as errors
Compilation failed
24724bf
Fri 24 Mar 2023 11:24:11 AM UTC: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:32:9: error: variable ‘aux’ set but not used [-Werror=unused-but-set-variable]
   32 |   List *aux = (List *) malloc(sizeof(List));
      |         ^~~
cc1: all warnings being treated as errors
Compilation failed
befe45a
Fri 24 Mar 2023 11:24:22 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from /nix/store/4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev/include/time.h:29,
                 from test.c:4:
list.c: In function ‘createList’:
list.c:33:7: error: incompatible types when assigning to type ‘List’ {aka ‘struct List’} from type ‘void *’
   33 | *aux= NULL;
      |       ^~~~
Compilation failed
696513a
Fri 24 Mar 2023 11:27:01 AM UTC: 
 list.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
5a21ece
Fri 24 Mar 2023 11:38:07 AM UTC: 
 list.c | 7 +++++++
 1 file changed, 7 insertions(+)
 tests:  2|5
total_score: 15/70
10ce47c
Fri 24 Mar 2023 11:47:32 AM UTC: 
 list.c | 9 +++++++++
 1 file changed, 9 insertions(+)
In file included from test.c:5:
list.c: In function ‘pushFront’:
list.c:67:14: error: implicit declaration of function ‘create_node’; did you mean ‘createNode’? [-Werror=implicit-function-declaration]
   67 |    Node* n = create_node(data);
      |              ^~~~~~~~~~~
      |              createNode
list.c:67:14: error: initialization of ‘Node *’ from ‘int’ makes pointer from integer without a cast [-Werror=int-conversion]
cc1: all warnings being treated as errors
Compilation failed
438de4d
Fri 24 Mar 2023 11:57:36 AM UTC: 
 list.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘pushFront’:
list.c:71:14: error: implicit declaration of function ‘create_node’; did you mean ‘createNode’? [-Werror=implicit-function-declaration]
   71 |    Node* n = create_node(data);
      |              ^~~~~~~~~~~
      |              createNode
list.c:71:14: error: initialization of ‘Node *’ from ‘int’ makes pointer from integer without a cast [-Werror=int-conversion]
cc1: all warnings being treated as errors
Compilation failed
fcea574
Fri 24 Mar 2023 11:58:04 AM UTC: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
84f6b43
Fri 24 Mar 2023 12:00:22 PM UTC: 
 list.c | 5 ++---
 1 file changed, 2 insertions(+), 3 deletions(-)
 tests:  2|5
total_score: 15/70
c066df4
